<resources>
    <string name="app_name">Cavaleiro da Lua</string>
    <string name="txt_entrar">Cavaleiro da Lua</string>
    <string name="btn_entrar">Entrar</string>
    <string name="txt_menu">Menu</string>
    <string name="btn_curiosidades">Curiosidades da série</string>
    <string name="btn_diferencas">Histórias do Cavaleiro da Lua</string>
    <string name="btn_balancolua">Balança da lua</string>
    <string name="btn_quiz">Quiz</string>--
    <string name="btn_voltar">Voltar</string>
    <string name="btn_inicio">Início</string>
    <string name="btn_quizMaker">Quiz Maker</string>
    <string name="btn_proxima_pergunta">Próxima</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="txt_balanca_off">Iniciar a balança</string>
    <string name="txt_balanca_on">Parar a balança</string>
    <string name="msgbox_titulo">Ops</string>
    <string name="msgbox_texto">O seu dispositivo não tem o sensor necessário</string>
    <string name="msgbox_local_titulo">Escolha um local</string>
    <string name="msgbox_local_texto">Selecione um dos locais para compara a distância de onde você
        está</string>
    <string name="msgbox_quiz_titulo">Vai com calma</string>
    <string name="msgbox_quiz_texto">Selecione uma alternativa antes de avançar</string>
    <string name="txt_balanca">Teste sua inclinação viajante da noite</string>
    <string-array name="txt_locais">
        <item>Museu de Belas Artes de Budapeste</item>
        <item>Coblença na Alemanha</item>
        <item>Bairro histórico do Cairo, Egito</item>
        <item>Empresa organizadora de eventos em Budapeste</item>
    </string-array>

    <string name="rd_cairo">Cidade de Cairo</string>
    <string name="rd_manicomio">Manicômio</string>
    <string name="rd_museu">Museu</string>
    <string name="rd_castelo">Castelo (1° Episódio)</string>

    <string name="txt_locais_serie">Locais da série:</string>
    <string name="btn_distancia">Comparar Distância</string>
    <string name="btn_local">Locais de Gravação</string>
    <string name="txt_noticia1">2ª temporada de Cavaleiro da Lua pode ter sido confirmada - <a href="https://observatoriodocinema.uol.com.br/series-e-tv/2a-temporada-de-cavaleiro-da-lua-pode-ter-sido-confirmada-veja">Veja</a></string>
    <string name="txt_noticia2">Imagem traz o uniforme de Jake Lockley na <a href="https://legadodamarvel.com.br/cavaleiro-da-lua-imagem-traz-o-uniforme-de-jake-lockley-na-2a-temporada/">2ª Temporada</a></string>
    <string name="txt_noticia3">Diretor de Cavaleiro da Lua diz que série "não precisa" de <a href="https://br.ign.com/cavaleiro-da-lua/98165/news/diretor-de-cavaleiro-da-lua-diz-que-serie-nao-precisa-de-crossovers-do-mcu-entenda">crossovers do MCU;</a></string>
    <string name="txt_inicio_titulo">Notícias</string>
    <string name="btn_Comprar">Comprar</string>


    <string name="txt_hq1">Dessa vez, o transtorno do Cavaleiro da Lua adotou outras três personalidades
            inusitadas: Capitão América, Homem-Aranha e Wolverine. Tudo isso para deter um
            chefão do crime.</string>
    <string name="txt_hq2">Agora os fantasmas do passado dão o tom das aventuras, trazendo morte até o Cavaleiro
            da Lua e seus aliados. O herói embarca em uma caçada a um violento criminoso e enfrenta
            psicopatas poderosos.</string>
    <string name="txt_hq3">Essa história contem a primeira aparição do personagem, na caçada ao Lobisomem. A
            aventura contém a origem de seu alter ego, aos pés do deus egípcio Khonshu.</string>
    <string name="txt_hq4">Enquanto Marc tenta lidar com o fato de sua persona Jack Lockey está lhe escondendo um
            segredo, o avatar do deus da Lua deverá enfrentar um homem conhecido como A verdade, que
            está levando as pessoas a se suicidarem.</string>

    <string name="chooser_navegador">Escolha um navegador…</string>


    <string name="txt_inicio">"Seja bem vindo(a).\n Clique nos 3 pontinhos para navegar pelo aplicativo"</string>

    <string-array name="txt_curio">
        <item>"1) O transtorno do Cavaleiro da Lua\n
            O personagem sofre de Transtorno Dissociativo
            de Identidade.Seus principais 'eus' são: O taxista Jack Lockey, o milionário Steven
            Grant, e seu eu verdadeiro eu, Marc Spector. Jack Lockey aparece somente no último
            ep, durante as cenas pós-créditos."</item>
        <item>"2) Seus poderes\n
            Ao aceitar o pacto com Khonshu, Marc ganha poderes como: visão
            noturna, a habilidade de enxergar o plano lunar, etc. Tudo isso se modifica de
            acordo com as fases da lua."</item>
        <item>"3) Por que seu traje é branco?\n
            Muitos super heróis se vestem com trajes discretos, com cores como preto, para
            passarem despercebidos. Diferentes desses, o cavaleiro da lua se veste de branco,\n
            justamente para que seus inimigos o percebam."</item>
        <item>"4) A origem Judaica \n
            A família de Marc Spector teve que fugir da Europa durante a perseguição aos judeus
            na Segunda Guerra Mundial. Encontraram refúgio nos Estados Unidos e Marc cresceu
            segundo os ensinamentos de seu pai rabino."</item>
    </string-array>
    <string-array name="txt_curio_pergunta">
        <item>"Você sabia: Que o cavaleiro da lua sofre de Transtorno Dissociativo de Identidade?\n
            Baixe o app Cavaleiro da Lua para saber mais."</item>
        <item>"Você sabe: Quais são os poderes do cavaleiro da lua?\n
            Baixe o app Cavaleiro da Lua para saber mais."</item>
        <item>"Você sabie: Por que o trade do cavaleiro da lua é branco?\n
            Baixe o app Cavaleiro da Lua para saber mais."</item>
        <item>"Você sabia: Qual a origem da família do cavaleiro da lua?\n
            Baixe o app Cavaleiro da Lua para saber mais."</item>
    </string-array>
    <string name="chooser_compartilhar">Escolha um app para compartilhar…</string>
    <string name="txt_formatar_distancia">"A distância é de:\n %6.2f Km."</string>
    <string name="txt_iniciar_balanca"> Parar a balança</string>
    <string name="txt_parar_balanca"> Iniciar a balança</string>
    <string-array name="txt_sensor">
        <item>Mr. Knight</item>
        <item>Steven</item>
        <item>Gire o celular</item>
        <item>Mark</item>
        <item>Moon Knight</item>
    </string-array>

    <string-array name="txt_pergunta">
        <item>1) Onde Steven Grant trabalha?</item>
        <item>2) Qual Deus NÃO estava no episódio 3?</item>
        <item>3) Qual a forma da Deusa Tuéris?</item>
        <item>4) Como eram os detalhes da bandana do pai de Layla?</item>
        <item>5) Qual era o filme favorito do Marc?</item>
        <item>6) Onde Amnit estava aprisionada?</item>
    </string-array>
    <string-array name="txt_alternativa_1">
        <item>Uma Loja de Presentes</item>
        <item>Um asilo de idosos</item>
        <item>É desempregado</item>
        <item>Atendente de supermercado</item>
    </string-array>
    <string-array name="txt_alternativa_2">
        <item>Hórus</item>
        <item>Hartor</item>
        <item>Amnit</item>
        <item>Ísis</item>
    </string-array>
    <string-array name="txt_alternativa_3">
        <item>Um Chacal</item>
        <item>Uma humana de 8 braços</item>
        <item>Uma águia</item>
        <item>Um hipopótamo</item>
    </string-array>
    <string-array name="txt_alternativa_4">
        <item>Tinha escaravelhos feitos a mão</item>
        <item>Tinha desenhos de lua</item>
        <item>Tinha flores e corações vermelhos</item>
        <item>Tinha desenhos de pirâmides</item>
    </string-array>
    <string-array name="txt_alternativa_5">
        <item>As aventuras de Steven Grant</item>
        <item>Tomb Buster</item>
        <item>Ruster Tomb</item>
        <item>Os Trapalhões</item>
    </string-array>
    <string-array name="txt_alternativa_6">
        <item>Na pirâmide de Gize</item>
        <item>No sarcófago de Senfu</item>
        <item>No templo do céu</item>
        <item>Na tumba de Alexandre, o Grade</item>
    </string-array>
    <string name="acertos">Acertos: %1$d/6 </string>
    <string-array name="txt_resultado_quiz">
        <item>Parabéns !</item>
        <item>Muito Bom</item>
        <item>Dá pra melhorar</item>
        <item>Qual é?</item>
    </string-array>
    <string-array name="txt_descricao_quiz">
        <item>Você é um verdadeiro(a) cavaleiro(a) da lua.</item>
        <item>Você é honrado(a) viajante da noite.</item>
        <item>Você deve re-assistir a série.</item>
        <item>Você assistiu a série antes? Khonshu está furioso.</item>
    </string-array>

    <string name="tema_titulo">Escolha um tema</string>
    <string name="btn_aplicar">Aplicar</string>
    <string name="claro">Claro</string>
    <string name="escuro">Escuro</string>

    <string name="btn_tema">Tema</string>
<<<<<<< Updated upstream
=======
    <string name="item_voltar">Voltar</string>
    <string name="item_apagar">Apagar dados</string>
    <string name="item_ajuda">Ajuda</string>
    <string name="deletar_cancelado">O apagamento foi cancelado</string>
    <string name="dialogo_apagar_titulo">Apagar dados</string>
    <string name="dialogo_apagar_texto">Deseja apagar todos os dados?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="item_backup">Fazer Backup</string>
    <string name="dialogo_backup_texto">Deseja fazer o backup?</string>
    <string name="backup_cancelado">O backup foi cancelado</string>
    <string name="dialogo_ajuda_titulo">Sobre reviews</string>
    <string name="dialogo_ajuda_texto">Use essa tela para escrever comentários sobre o aplicativo e dizer no que podemos melhorar.</string>
    <string name="dialogo_sorteio_titulo">Sorteio Cavaleirinho da Noite</string>
    <string name="dialogo_sorteio_texto">Coloque seu nome seguido do seu email para concorrer a um Funko do MoonKnight. Você pode mudar seus dados até dia 19/12/2022.</string>
    <string name="salvar">Salvar</string>
    <string name="titulo_sorteio">Sorteio Cavalerinho da Lua</string>
    <string name="data_sorteio">Válido até dia 19.12.2022</string>
    <string name="sorteio_nome_email">Digite seu nome e seu email:</string>
    <string name="btn_atualizar">Atualizar</string>
    <string name="btn_apagar">Apagar</string>
    <string name="txt_nome_atualizar">"Nome: "</string>
    <string name="txt_email_atualizar">"Email: "</string>
    <string name="txt_mensagem_atualizar">"Mensagem: "</string>
    <string name="titulo_review">Escreva seu Review</string>
    <string name="btn_enviar">Enviar</string>
    <string name="txt_sem_dados">Não há reviews salvas</string>
    <string name="escrever_review">Escrever Review</string>
    <string name="item_sorteio">Sorteio</string>
    <string name="item_review">Review</string>
>>>>>>> Stashed changes
</resources>
