<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item1"
        android:title="@string/btn_curiosidades"/>

    <item android:id="@+id/item2"
        android:title="@string/btn_distancia"/>

    <item android:id="@+id/item3"
        android:title="@string/btn_Comprar"/>

    <item android:id="@+id/item4"
        android:title="@string/btn_balancolua"/>

    <item android:id="@+id/item5"
        android:title="@string/btn_quiz"/>

    <item android:id="@+id/item6"
        android:title="@string/btn_tema"/>

    <item android:id="@+id/item7"
        android:title="@string/btn_inicio"/>

    <item android:id="@+id/item8"
        android:title="@string/item_sorteio"/>

    <item android:id="@+id/item9"
        android:title="@string/item_review"/>
</menu>