<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    tools:context=".mapa_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/preto"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" >
    <Button
        android:id="@+id/btn_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/hamburger"
        android:onClick="voltarMenu"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0" />
    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="333dp"
        android:layout_height="155dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812">

        <RadioButton
            android:id="@+id/rd1_local"
            android:layout_width="match_parent"
            android:layout_height="38.75dp"
            android:text="@string/rd_museu" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <RadioButton
            android:id="@+id/rd2_local"
            android:layout_width="match_parent"
            android:layout_height="38.75dp"
            android:text="@string/rd_castelo" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <RadioButton
            android:id="@+id/rd3_local"
            android:layout_width="match_parent"
            android:layout_height="38.75dp"
            android:text="@string/rd_Cairo" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <RadioButton
            android:id="@+id/rd4_local"
            android:layout_width="match_parent"
            android:layout_height="38.75dp"
            android:text="@string/rd_manicomio" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </RadioGroup>

    <WebView
        android:id="@+id/wb_local"
        android:layout_width="match_parent"
        android:layout_height="302dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </WebView>

    <TextView
        android:id="@+id/txt_local"
        android:layout_width="347dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@color/branco"
        android:text="@string/txt_locais_serie"
        android:textAlignment="center"
        android:textColor="@color/preto"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/txt_distancia"
        android:layout_width="199dp"
        android:layout_height="61dp"
        android:textColor="@color/preto"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/button4"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:background="@color/amarelo_lua"
        android:onClick="mostrarLocal"
        android:text="@string/btn_distancia"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />



</androidx.constraintlayout.widget.ConstraintLayout>